Fixed Project 5; added .js file for InitialCards array, improved code flexibility and readability, corrected errors in the code.

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -71,10 +71,12 @@
     right: -52.5px !important;
 
     background-image: url(../images/preview-close.svg) !important;
+    opacity: 100% !important;
+
 }
 
 .modal__preview_close:hover {
-    opacity: 40%;
+    opacity: 40% !important;
 }
 
 .modal__close-button {
